--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.8.0",
+    "single-spa-react": "^2.14.0",
+    "systemjs-webpack-interop": "^2.3.4",
     "terra-base": "^5.4.0",
     "terra-button": "^3.12.0"
   },
   "scripts": {
     "aggregate-translations": "tt-aggregate-translations -l ['en'] -d ./translations -o ./node_modules/terra-i18n/node_modules -f es6",
-    "start": "yarn run aggregate-translations && react-scripts start",
-    "build": "yarn run aggregate-translations && react-scripts build",
-    "test": "yarn run aggregate-translations && react-scripts test",
+    "start": "yarn run aggregate-translations && PORT=3001 react-app-rewired start",
+    "build": "yarn run aggregate-translations && react-app-rewired build",
+    "test": "yarn run aggregate-translations && react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
+    "react-app-rewired": "^2.1.8",
     "react-scripts": "^3.0.1",
     "terra-aggregate-translations": "^1.0.0"
   }
